# swe-agent-assignment

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/: deployment.md
examples/sample_files/: grades.csv  notes.txt
src/: agent.py  config.py
src/tools/: calculator.py  file_reader.py  web_search.py
tests/: conftest.py  test_agent.py  test_tools.py
