[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-study-assistant"
version = "1.0.0"
description = "An AI agent powered by Claude that answers questions using calculator, file reader, and web search tools"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
study-assistant = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
